# python-acdc

./: acdc.py  benchmark-acdc.py  benchmark-ahocorapy.py  benchmark.sh  benchmark.txt  benchmarks.sh  benchmarks.txt  lorem-ipsum-construction.benchmarks.txt  lorem-ipsum-search.benchmarks.txt  loremipsum.benchmarks.txt  pyproject.toml  science-construction.benchmarks.txt  science-search.benchmarks.txt  science.benchmarks.txt  science.txt  tests.py  tools.py
benchmarks/: acdcb.py  ahocorapy.py  benchmarks.py  pyahocorasick.py
