[tool.poetry]
name = "acdc"
version = "0.1.1"
description = "Wanna-be fast string search"
authors = ["Amirouche <amirouche@hyper.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/amirouche/acdc"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
memory-profiler = "*"
ahocorapy = "*"
pytest = "*"
pytest-cov = "*"
debug = "*"
ipython = "*"
termgraph = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
